--- a/2.03-Exercise-ConfigureTheJavaPlugin/build.gradle
+++ b/2.03-Exercise-ConfigureTheJavaPlugin/build.gradle
@@ -5,10 +5,6 @@ Java plugin. While the Java plugin defaults are sufficient for many projects,
 we will typically need to add additional configuration.
 
 Exercises:
-
-1. Apply the Java plugin to your project.
-2. Modify the 'jar' task to add a manifest attribute named
-   'Implementation-Version' with a value of '1.0'.
 3. Configure the main source set so that it includes the 'java' directory
    as an additional source directory.
 4. Use the gradle command-line to build your JAR file.
@@ -26,3 +22,26 @@ User Guide chapter regarding the Java plugin.
 https://docs.gradle.org/current/userguide/java_plugin.html#sec:source_sets
 
 */
+
+/* 1. Apply the Java plugin to your project. */
+apply plugin 'java'
+
+/* 2. Modify the 'jar' task to add a manifest attribute named
+   'Implementation-Version' with a value of '1.0'. */
+jar {
+	manifest {
+		attributes 'Implementation-Version': '1.0'
+	}
+}
+
+/* 3. Configure the main source set so that it includes the 'java' directory
+   as an additional source directory. */
+sourceSets {
+	main {
+		java {
+			srcDir 'java'
+		}
+	}
+}
+
+
