--- a/2.06-Exercise-DeclareARepositoryAndDependencies/build.gradle
+++ b/2.06-Exercise-DeclareARepositoryAndDependencies/build.gradle
@@ -7,11 +7,6 @@ Also, we've supplied a simple task you can use to see all the dependencies
 that have been configured for the 'compile' configuration.
 
 Exercises:
-
-1. Configure Maven Central as a repository
-2. Add a dependency to the 'compile' configuration for the latest version
-   of commons-io.
-3. Add a file dependency that includes all the jars in the `libs` directory.
 4. Run the `printDependencies` task to verify the dependencies.
 5. Run the `printDependencies` task with the --refresh-dependencies flag.
 6. Run the `printDependencies` task one more time and note the difference in
@@ -27,8 +22,24 @@ http://search.maven.org/
 
 apply plugin: 'java'
 
+/* 1. Configure Maven Central as a repository */
+repositories {
+	mavenCentral()
+}
+
+/* 2. Add a dependency to the 'compile' configuration for the latest version
+   of commons-io. */
+dependencies {
+	compile 'commons-io:commons-io:20030203.000550'
+	
+	/* 3. Add a file dependency that includes all the jars in the `libs` directory. */
+	compile fileTree(dir: 'libs', include: '*.jar')
+}
+
 task printDependencies {
     doLast {
         configurations.compile.each { println it.name }
     }
 }
+
+
