--- a/2.09-Exercise-AddDependenciesToCustomConfiguration/build.gradle
+++ b/2.09-Exercise-AddDependenciesToCustomConfiguration/build.gradle
@@ -6,14 +6,8 @@ to properly compile.
 
 Exercises:
 
-1. Create a new configuration called 'deps'.
-2. Make the 'compile' configuration extend from the 'deps' configuration.
-3. Add a dependency to the latest version of Google's 'guava' library to
-   the 'deps' configuration.
 4. Build the project and ensure there are no errors.
-5. Add a task called 'zipDeps' that creates a Zip file including all the
-   files from the 'deps' configuration. Assign a baseName of 'dependencyArchive'
-   and a  classifier of 'deps' to the archive.
+
 6. Run the 'zipDeps' task and confirm it includes the 'guava' JAR.
 
 Hint: Take a look at the Configuration DSL Reference page for how to make
@@ -28,3 +22,27 @@ apply plugin: 'java'
 repositories {
     mavenCentral()
 }
+
+configurations {
+	// 1. Create a new configuration called 'deps'.
+	deps
+	// 2. Make the 'compile' configuration extend from the 'deps' configuration.
+	compile.extendsFrom deps
+}
+
+// 3. Add a dependency to the latest version of Google's 'guava' library to the 'deps' configuration.
+dependencies {
+	deps 'com.google.guava:guava:25.1-jre'
+}
+
+/* 5. Add a task called 'zipDeps' that creates a Zip file including all the
+   files from the 'deps' configuration. Assign a baseName of 'dependencyArchive'
+   and a  classifier of 'deps' to the archive. */
+task zipDeps(type: Zip) {
+	baseName = "Foo"
+	version = "4.2"
+	classifier = 'deps'
+	from configurations.deps
+}
+
+
