--- a/2.11-Exercise-WorkWithUnitTests/build.gradle
+++ b/2.11-Exercise-WorkWithUnitTests/build.gradle
@@ -8,7 +8,7 @@ the failing test.
 
 Exercises:
 
-1. Add a test dependency to the latest version of 'junit'.
+
 2. Run the provided unit tests.
 3. Use the test reports to identify the failing test. Modify the production
    code such that the failing test will pass.
@@ -19,4 +19,9 @@ apply plugin: 'java'
 
 repositories {
     mavenCentral()
+}
+
+/* 1. Add a test dependency to the latest version of 'junit'. */
+dependencies {
+	testCompile 'junit:junit:4.12'
 }
