--- a/2.13-Exercise-ConfigureTheGradleWrapper/build.gradle
+++ b/2.13-Exercise-ConfigureTheGradleWrapper/build.gradle
@@ -7,15 +7,28 @@ wrapper files.
 
 Exercises:
 
-1. Run the 'wrapper' task to create the Gradle wrapper files.
-2. Use the wrapper to run the 'tasks' task.
-3. Configure the 'wrapper' task to use Gradle version 2.14.1.
-4. Use the wrapper with the '--version' option to confirm it is using
-   Gradle version 2.14.1.
-5. Modify the gradle-wrapper.properties file to use the latest Gradle
-   nightly build.
-
 Hint: For more information on using Gradle nightly builds, check out the
 Gradle website: http://gradle.org/gradle-nightly-build/
 
 */
+
+/* 1. Run the 'wrapper' task to create the Gradle wrapper files. */
+// gradle wrapper
+
+/* 2. Use the wrapper to run the 'tasks' task. */
+// gradlew tasks
+
+/* 3. Configure the 'wrapper' task to use Gradle version 2.14.1. */
+wrapper {
+    gradleVersion = '2.14.1'
+}
+
+/* 4. Use the wrapper with the '--version' option to confirm it is using
+   Gradle version 2.14.1. */
+// gradle wrapper
+// gradlew -v // This will not work as gradle 2.14.1 does not support java version 9
+// @m not prepered to downgrade my version of Java for this test.
+
+/* 5. Modify the gradle-wrapper.properties file to use the latest Gradle
+   nightly build. */
+
