--- a/FinalProject/app/build.gradle
+++ b/FinalProject/app/build.gradle
@@ -30,6 +30,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    productFlavors {
+        free {
+            applicationId "com.udacity.gradle.builditbigger.free"
+            flavorDimensions "default"
+        }
+        paid {
+            applicationId "com.udacity.gradle.builditbigger.paid"
+            flavorDimensions "default"
+        }
+    }
 }
 
 dependencies {
