--- a/FinalProject/app/build.gradle
+++ b/FinalProject/app/build.gradle
@@ -11,60 +11,60 @@ buildscript {
 }
 
 android {
-    compileSdkVersion 27
-
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.udacity.gradle.builditbigger"
-        minSdkVersion 21
-        targetSdkVersion 27
+        minSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
     flavorDimensions "default"
-
     productFlavors {
         free {
             applicationId "com.udacity.gradle.builditbigger.free"
             dimension "default"
+            minSdkVersion 27
+            targetSdkVersion 28
         }
         paid {
             applicationId "com.udacity.gradle.builditbigger.paid"
             dimension "default"
+            minSdkVersion 27
+            targetSdkVersion 28
         }
     }
+    buildToolsVersion '28.0.0'
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     // Java library that provides a joke
     implementation project(':jokeprovider')
     // Android library that displays the provided joke
     implementation project(':displayjoke')
-
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.google.android.gms:play-services-ads:15.0.1'
+    // Only required in the free implementation
+    freeImplementation 'com.google.android.gms:play-services-ads:15.0.1'
+    endpointsServer project(path: ':backend', configuration: 'endpoints')
+    implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
     implementation 'com.google.api-client:google-api-client:1.23.0'
     implementation 'com.google.http-client:google-http-client-android:1.23.0'
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
-
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-    implementation 'com.android.support:design:27.1.1'
-    endpointsServer project(path: ':backend', configuration: 'endpoints')
-
+    implementation 'com.android.support:support-v4:28.0.0-alpha3'
+    // Testing dependencies
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
     testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:design:28.0.0-alpha3'
+    implementation 'com.android.support:customtabs:28.0.0-alpha3'
 }
