--- a/FinalProject/build.gradle
+++ b/FinalProject/build.gradle
@@ -2,8 +2,8 @@
 
 buildscript {
     repositories {
-        jcenter()
         google()
+        jcenter()
     }
     dependencies {
         classpath 'com.google.guava:guava:23.0'
@@ -16,7 +16,10 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
         google()
+        jcenter()
+        maven {
+            url "https://maven.google.com"
+        }
     }
 }
